adicionando endpoint validador de token
