# src/infra/api/userRouter.ts
@@ -8,5 +8,6 @@ userRouter.get('/api/users/:id', errorHandler(userController.findById.bind(userC
 userRouter.post('/api/users', errorHandler(userController.create.bind(userController)));
 userRouter.delete('/api/users/:id', errorHandler(userController.delete.bind(userController)));
 userRouter.post('/api/auth/login', errorHandler(userController.authenticate.bind(userController)));
+userRouter.post('/api/auth/validate', errorHandler(userController.validateToken.bind(userController)));
 
 export default userRouter;
